<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.shirysartstudio.MainActivity"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="@dimen/viewpager_height"

        android:id="@+id/photo_gallery" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_to_board"
            android:layout_marginTop="@dimen/space_btw_component"
            android:text="@string/studio_name"
            android:textSize="@dimen/business_name_text_size"
            android:textColor="@color/colorPrimaryText"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/studio_description"
            android:layout_marginLeft="@dimen/space_to_board"
            android:layout_marginTop="@dimen/space_btw_component"
            android:layout_marginRight="@dimen/space_to_board"
            android:layout_marginBottom="@dimen/space_btw_component"
            android:textColor="@color/colorPrimaryText"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/space_to_board"
        android:layout_marginTop="@dimen/space_to_board">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_open_time" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/open_time"
            android:layout_marginLeft="@dimen/space_to_board"
            android:gravity="center"
            android:textColor="@android:color/background_dark"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/space_to_board"
        android:layout_marginTop="@dimen/space_btw_component">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_phone"/>
        <TextView
            android:id="@+id/phone_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/phone"
            android:layout_marginLeft="@dimen/space_to_board"
            android:gravity="center"
            android:textColor="@android:color/background_dark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/space_to_board"
        android:layout_marginTop="@dimen/space_btw_component">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_email"/>
        <TextView
            android:id="@+id/email_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/email"
            android:layout_marginLeft="@dimen/space_to_board"
            android:clickable="true"
            android:gravity="center"
            android:autoLink="email"
            android:textColorLink="@android:color/background_dark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/space_to_board"
        android:layout_marginTop="@dimen/space_btw_component">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_location"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/address"
            android:layout_marginLeft="@dimen/space_to_board"
            android:layout_marginRight="@dimen/space_to_board"
            android:textColor="@android:color/background_dark"/>
    </LinearLayout>

<fragment
    android:layout_marginTop="@dimen/space_btw_component"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:id="@+id/map"
    android:name = "com.google.android.gms.maps.MapFragment"/>


</LinearLayout>
